corrected issue with spacing

--- a/Quizzical/src/App.css
+++ b/Quizzical/src/App.css
@@ -19,12 +19,12 @@ body,
   display: flex;
   margin: 0;
   padding: 0;
-  justify-content: center;
-  align-items: center;
+   align-items: center;
   flex-direction: column;
   height: 100%;
   width: 100%;
 }
+
 .starting-page {
   display: flex;
   flex-direction: column;
@@ -93,6 +93,8 @@ body,
   width: 80%;
   padding-bottom: 10px;
   transform: rotate(-0.05deg);
+  margin-bottom: 4%;
+  margin-top: 3%;
 }
 
 .question-text {
